@@ -10,6 +10,11 @@
     <height>252</height>
    </rect>
   </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="margin">
+    <number>0</number>
+   </property>
+   <item>
   <layout class="QFormLayout" name="formLayout">
    <item row="0" column="0">
     <widget class="StateLabel" name="trackNameLabel">
@@ -127,6 +132,11 @@
    </item>
    <item row="8" column="1">
     <widget class="ClearSpinBox" name="year"/>
+   </item>
+  </layout>
+  </item>
+  <item>
+   <widget class="QProgressBar" name="progress"/>
    </item>
   </layout>
  </widget>
